--- a/styles/index.css
+++ b/styles/index.css
@@ -27,10 +27,10 @@
 
 @layer components {
   .btn-primary {
-    @apply transition rounded-full w-300 h-60 md:w-200 flex items-center justify-center lg:w-300 text-spaceblack bg-temporalblue hover:text-temporalblue hover:bg-spaceblack border border-temporalblue;
+    @apply transition rounded-full w-300 h-60 md:w-200 flex items-center justify-center lg:w-300 text-temporalblack bg-temporalblue hover:text-temporalblue hover:bg-temporalblack border border-temporalblue;
   }
   .btn-secondary {
-    @apply transition rounded-full w-300 h-60 md:w-200 flex items-center justify-center lg:w-300 border hover:bg-white hover:text-spaceblack;
+    @apply transition rounded-full w-300 h-60 md:w-200 flex items-center justify-center lg:w-300 border hover:bg-white hover:text-temporalblack;
   }
   .nav-link {
     @apply hover:text-temporalblue transition-colors relative;
